修正共用視窗

--- a/Quality/Quality/Views/PublicWondow/BrandList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/BrandList.cshtml
@@ -42,7 +42,7 @@
     {
         <input type="text" name="BrandID" value="" />
         <input type="submit" value="Query" />
-        <input id="" type="button" value="Exit" />
+        <input id="btnExit" type="button" value="Exit" />
     }
     @*</div>*@
 
