--- a/Quality/Quality/Views/PublicWondow/SeasonList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SeasonList.cshtml
@@ -44,7 +44,7 @@
         <input type="text" name="SeasonID" value="" />
         @Html.Hidden("BrandID", ViewData["BrandID"]);
         <input type="submit" value="Query" />
-        <input id="" type="button" value="Exit" />
+        <input id="btnExit" type="button" value="Exit" />
     }
     @*</div>*@
 
