--- a/Quality/Quality/Views/PublicWondow/SewingLineList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SewingLineList.cshtml
@@ -44,7 +44,7 @@
         <input type="text" name="ID" value="" />
         @Html.Hidden("FactoryID", ViewData["FactoryID"]);
         <input type="submit" value="Query" />
-        <input id="" type="button" value="Exit" />
+        <input id="btnExit" type="button" value="Exit" />
     }
     @*</div>*@
 
