--- a/Quality/Quality/Views/PublicWondow/SizeList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/SizeList.cshtml
@@ -49,7 +49,7 @@
         @Html.Hidden("SeasonID", ViewData["SeasonID"]);
         @Html.Hidden("StyleID", ViewData["StyleID"]);
         <input type="submit" value="Query" />
-        <input id="" type="button" value="Exit" />
+        <input id="btnExit" type="button" value="Exit" />
     }
     @*</div>*@
 
