--- a/Quality/Quality/Views/PublicWondow/StyleList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/StyleList.cshtml
@@ -45,7 +45,7 @@
         @Html.Hidden("BrandID", ViewData["BrandID"]);
         @Html.Hidden("SeasonID", ViewData["SeasonID"]);
         <input type="submit" value="Query" />
-        <input id="" type="button" value="Exit" />
+        <input id="btnExit" type="button" value="Exit" />
     }
     @*</div>*@
 
