Update format BulkFGT SearchList

--- a/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/SearchList/Index.cshtml
@@ -137,8 +137,7 @@
         <div class="content-scroll">
             <div class="inner-scroll" style="float:left">
                 <div>
-
-                    <table id="myTable" class="table table-striped display" style="text-align:center">
+                    <table id="myTable" class="table table-striped display" style="text-align:center; width:150%">
                         <thead>
                             <tr class="row-name" style="color:black">
                                 <th>Type</th>
