--- a/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
@@ -104,7 +104,7 @@
                                     @Html.DropDownList("Month", (List<SelectListItem>)ViewBag.MonthList, null, new { @class = "form-control inputStyle" })
                                 </td>
                                 <td class="queryPadding">
-                                    <input type="submit" name="name" id="btnQuery" value="Query" />
+                                    <input class="site-btn btn-gy btn-sm" type="submit" name="name" id="btnQuery" value="Query" />
                                 </td>
                             </tr>
                         </table>
