--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -291,7 +291,7 @@
                                 <tr>
                                     <td><h5>Last Edit Name</h5></td>
                                     <td colspan="5">
-                                        @Html.TextBoxFor(o => o.Detail.LastEditName, "", new { @class = "OnlyEdit", @readonly = "readonly" })
+                                        @Html.TextBoxFor(o => o.Detail.LastEditName, "", new { @readonly = "readonly" })
                                     </td>
                                 </tr>
                             </tbody>
