--- a/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricOvenTest/Index.cshtml
@@ -99,10 +99,14 @@
 
         .DataTable > tbody > tr > td {
             border: solid 1px gray;
-            padding: 1em;
+            padding: 0.5em;
             text-align: left;
             vertical-align: middle;
         }
+
+    .DetailTable > tbody > tr > td {
+        text-align: center;
+    }
 </style>
 
 <div class="main-content">
@@ -122,7 +126,7 @@
                             <p class="InfoTitle White">SP# </p>
                         </div>
                         <div class="col-auto">
-                            <input id="POID" name="POID" type="text" value="" />
+                            <input id="POID" name="POID" type="text" value=@ViewBag.POID />
                         </div>
 
                         <div class="col-auto">
@@ -156,7 +160,7 @@
                                 <td style="width: 66%;">
                                 </td>
                                 <td align="right">
-                                    <h4 id="New" style=" margin-right: 1em;">
+                                    <h4 id="New" style=" margin-right: 10em;">
                                         <img src="~/Image/Icon/New.png" width="30" />
                                         New Test No
                                     </h4>
@@ -172,7 +176,7 @@
                             <tr>
                                 <td style="width: 10vw;"><h5>SP#</h5></td>
                                 <td style="width: 20vw;">
-                                    @Html.DisplayFor(o => o.Main.POID, "", "")
+                                    @Html.TextBoxFor(o => o.Main.POID, "", new { @readonly = "readonly" })
                                 </td>
                                 <td style="width: 10vw;"><h5>Style#</h5></td>
                                 <td style="width: 20vw;">
@@ -222,7 +226,7 @@
                             <tr>
                                 <td><h5>Remark</h5></td>
                                 <td colspan="5">
-                                    @Html.TextBoxFor(o => o.Main.Remark, "", new { @readonly = "readonly" })
+                                    @Html.TextBoxFor(o => o.Main.Remark, "", new { @readonly = "readonly", @class = "OnlyEdit" })
                                 </td>
                             </tr>
                             <tr>
@@ -242,8 +246,8 @@
                     </table>
                 </div>
                 <div style="margin-top: 1em; width: 92vw; overflow:auto;">
-                    <table class="DetailTable DataTable">
-                        <thead>
+                    <table class="DetailTable DataTable" style="text-align:center;">
+                        <thead style="text-align: center">
                             @{
                                 <tr>
                                     <th><h4>No. of Test</h4></th>
@@ -263,50 +267,50 @@
                             @for (int i = 0; i <= Model.Details.Count - 1; i++)
                             {
                                 string aHref = "";
-                            <tr>
-                                <td style="width:10vw;">
+                                <tr>
+                                    <td style="width:10vw;">
 
-                                    @if (Model.Details[i].Article != "")
-                                    {
-                                        aHref = Url.Action("Detail", "GarmentTest", new { ID = Model.Details[i].Article });
+                                        @if (Model.Details[i].TestNo != "")
+                                        {
+                                            aHref = Url.Action("Detail", "FabricOvenTest", new { POID = Model.Main.POID, TestNo = Model.Details[i].TestNo });
+                                        }
+
+                                        <a href="@aHref" idx="@Model.Main.POID ," idv="@Model.Details[i].TestNo">
+                                            @Html.DisplayFor(o => Model.Details[i].TestNo, "", "")
+                                        </a>
+                                    </td>
+
+                                    @{
+                                        string InspDate = Model.Details[i].InspDate.HasValue ? Model.Details[i].InspDate.Value.ToString("yyyy/MM/dd") : string.Empty;
+                                        string ResultColor = Model.Details[i].Result == "Pass" ? "blue" : "red";
                                     }
 
-                                    <a href="@aHref" idx="@Model.Details[i].Article" idv="">
-                                        @Html.DisplayFor(o => Model.Details[i].TestNo, "", "")
-                                    </a>
-                                </td>
+                                    <td style="width:10vw;">
+                                        InspDate
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.Details[i].Article, "", "")
+                                    </td>
+                                    <td class="@ResultColor" style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.Details[i].Result, "", "")
+                                    </td>
 
-                                @{
-                                    string InspDate = Model.Details[i].InspDate.HasValue ? Model.Details[i].InspDate.Value.ToString("yyyy/MM/dd") : string.Empty;
-                                    string ResultColor = Model.Details[i].Result == "Pass" ? "blue" : "red";
-                                }
-
-                                <td style="width:10vw;">
-                                    InspDate
-                                </td>
-                                <td style="width:10vw;">
-                                    @Html.DisplayFor(o => Model.Details[i].Article, "", "")
-                                </td>
-                                <td class="@ResultColor" style="width:10vw;">
-                                    @Html.DisplayFor(o => Model.Details[i].Result, "", "")
-                                </td>
-
-                                <td style="width:10vw;">
-                                    @Html.DisplayFor(o => Model.Details[i].Inspector, "", "")
-                                </td>
-                                <td style="width:10vw;">
-                                    @Html.DisplayFor(o => Model.Details[i].Remark, "", "")
-                                </td>
-                                <td style="width:10vw;">
-                                    @Html.DisplayFor(o => Model.Details[i].LastUpdate, "", "")
-                                </td>
-                                <td style="width:10vw;">
-                                    <img class="detailEdit" src="~/Image/Icon/Edit.png" width="30" />
-                                </td>
-                                <td style="width:10vw;">
-                                    <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
-                                </td>
-                            </tr>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.Details[i].Inspector, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.Details[i].Remark, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        @Html.DisplayFor(o => Model.Details[i].LastUpdate, "", "")
+                                    </td>
+                                    <td style="width:10vw;">
+                                        <img class="detailEdit" onclick="DetailView('@Model.Details[i].TestNo')" src="~/Image/Icon/Edit.png" width="30" />
+                                    </td>
+                                    <td style="width:10vw;">
+                                        <img class="detailDelete" src="~/Image/Icon/Delete.png" width="30" />
+                                    </td>
+                                </tr>
                             }
                         </tbody>
                     </table>
@@ -319,3 +323,120 @@
     </div>
 </div>
 
+<script type="text/javascript">
+    var msg;
+    var EditMode;
+    $(function () {
+        msg = new MessagerAlert();
+        EditMode = false;
+        IsEditModeChange();
+
+    });
+
+
+
+    function IsEditModeChange() {
+        EditModeButtionBind();
+
+        if (EditMode) {
+            $(".rowHeader input[type='text']").attr("disabled", "disabled");
+            $(".rowHeader input[type='button']").unbind('click').addClass("IsEditModeQuery");
+            $('#btnQuery').addClass("IsEditModeQuery");
+            $("#Edit, #New").removeClass("IsEditMode");
+            $('#Save, #Undo').addClass("IsEditMode");
+            $(".DataTable input[type='text']").removeAttr("disabled");
+            $(".DetailTable img").addClass('display-None');
+
+            $(".OnlyEdit").removeAttr("disabled").removeAttr("readonly");
+
+            $('#btnQuery').on('click', function () {
+                return false;
+            });
+        }
+        else {
+            $(".rowHeader input[type='text']").removeAttr("disabled");
+            $(".rowHeader input[type='button']").removeClass("IsEditModeQuery");
+            $('#btnQuery').unbind('click').removeClass("IsEditModeQuery");
+
+            if ($('#POID').val() != undefined && $('#POID').val() != '')
+            {
+                $("#Edit, #New").addClass("IsEditMode");
+            }
+
+            $('#Save, #Undo').unbind('click').removeClass("IsEditMode");
+            $(".DataTable input[type='text']").attr("disabled", "disabled");
+            $(".DetailTable img").removeClass('display-None');
+
+
+            $('#btnQuery').on('click', function () {
+                if ($('#POID').val() == '') {
+                    msg.WithError("SP# cannot be empty");
+                    return false;
+                }
+            });
+        }
+    }
+
+
+    function EditModeButtionBind() {
+        $('#Edit').on('click', function () {
+            if ($('#Main_POID').val() == "") {
+                return;
+            }
+
+            if ($('#Main_POID').val() != "") {
+                EditMode = true;
+                IsEditModeChange();
+            }
+        });
+
+        $('#Save').on('click', function () {
+
+            var main = {
+                POID: $('#Main_POID').val(),
+                Remark: $('#Main_Remark').val()
+            };
+            var Details = null;
+            var POID = $('#Main_POID').val();
+            var Remark = $('#Main_Remark').val();
+            SaveData(main);
+        });
+
+        function SaveData(main) {
+        $.ajax({
+            url: "@Url.Action("SaveMaster", "FabricOvenTest", new { Area = "BulkFGT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ main: main, }),
+            async: false,
+            success: function (data) {
+                document.getElementById("QueryForm").submit();
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+            }
+        });
+    }
+
+        $('#Undo').on('click', function () {
+            EditMode = false;
+            IsEditModeChange();
+            $('#btnQuery').click();
+        });
+
+
+        $('#New').on('click', function () {
+            location.href = '@Url.Action("Detail")?POID=' + document.getElementById("Main_POID").value.trim() + '&TestNo=""';
+        });
+
+
+    }
+
+    function DetailView(TestNo) {
+
+        location.href = '@Url.Action("Detail")?POID=' + document.getElementById("Main_POID").value.trim() + '&TestNo=' + TestNo;
+    }
+
+
+
+</script>
